# rust-hello-world

./: .gitignore  LICENSE  README.md
rust-hello-world/: Cargo.toml
rust-hello-world/src/: main.rs
