[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2" # Or latest 2.x version
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = "2"
futures = "0.3"
duckdb = { version = "1.1.1", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17.7"
